fix(icon): set vertical align to middle

--- a/src/components/doc-content.less
+++ b/src/components/doc-content.less
@@ -167,6 +167,7 @@
 
   .ui-icon {
     color: #b3b2b3;
+    vertical-align: middle;
 
     svg {
       width: 20px;
